Fix accent images on small screens

--- a/static/style.scss
+++ b/static/style.scss
@@ -156,9 +156,9 @@ html, body {
 
 #s2Accent1 {
     position: absolute;
-    top: -0.7vh;
+    top: -1vh;
     height: auto;
-    width: 100%;
+    width: 102%;
     transform: rotateX(180deg);
 }
 
@@ -374,7 +374,7 @@ html, body {
 
 #s2Accent3 {
     height: auto;
-    width: 100%;
+    width: 103%;
     position: absolute;
     bottom: -1vh;
 }
